notes: fix embedded note text color in dark mode.

--- a/app/javascript/src/styles/specific/notes.scss
+++ b/app/javascript/src/styles/specific/notes.scss
@@ -85,6 +85,8 @@ div#note-container {
     }
 
     &.embedded {
+      color: var(--note-body-text-color);
+
       div.bg {
         height: 100%;
         text-align: center;
